--- a/app/src/main/res/layout-land/activity_calling.xml
+++ b/app/src/main/res/layout-land/activity_calling.xml
@@ -19,8 +19,9 @@
         android:gravity="center"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="horizontal">
 
         <Switch
@@ -31,6 +32,7 @@
             android:layout_gravity="center"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="80dp"
+            android:visibility="gone"
             android:text="@string/use_e_commerce_flow"/>
 
         <Switch
