--- a/app/src/main/res/layout-xlarge-land/activity_calling.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_calling.xml
@@ -20,20 +20,24 @@
         android:gravity="center"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="20dp"
+        android:layout_marginLeft="230dp"
+        android:layout_marginRight="230dp"
         android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:layout_gravity="center"
         android:orientation="horizontal">
 
-        <Switch
+      <Switch
             android:id="@+id/product_toggle"
             android:layout_width="0dp"
             android:layout_weight="0.5"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="220dp"
-            android:layout_marginRight="220dp"
+            android:textSize="22sp"
+            android:visibility="gone"
             android:text="@string/use_e_commerce_flow"/>
 
         <Switch
@@ -43,8 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Enable Alert Dialog"
-            android:layout_marginLeft="220dp"
-            android:layout_marginRight="220dp"
+            android:textSize="22sp"
             android:checked="true"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
 
@@ -79,7 +82,7 @@
             android:layout_height="wrap_content"
             android:text="Transaction status:"
             android:layout_marginTop="0dp"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:textColor="@color/design_default_color_primary_dark"
             android:layout_gravity="center_horizontal"
             android:gravity="center"/>
@@ -90,7 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
             android:layout_marginLeft="20dp"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:textColor="@color/design_default_color_primary_dark"
             android:layout_gravity="center_horizontal"
             android:gravity="center"/>
